--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^1.4.0",
         "baileys": "^6.7.21",
+        "bcrypt": "^6.0.0",
         "chalk": "^4.1.2",
         "dotenv": "^17.2.3",
         "pg": "^8.16.3",
