--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "baileys": "^6.7.21",
         "bcrypt": "^6.0.0",
         "chalk": "^4.1.2",
+        "cuid": "^3.0.0",
         "dotenv": "^17.2.3",
         "pg": "^8.16.3",
         "pino": "^8.14.1",
