--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "chalk": "^4.1.2",
         "cuid": "^3.0.0",
         "dotenv": "^17.2.3",
+        "node-fetch": "^3.3.2",
         "pg": "^8.16.3",
         "pino": "^8.14.1",
-        "readline": "1.3.0"
+        "readline": "1.3.0",
+        "zod": "^4.1.13"
     }
 }
