feat: Implement LLM Factory with OpenAI and Ollama support

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,45 @@
-# Database configuration
-DB_USER=your-db-user
-DB_HOST=your-db-host
-DB_NAME=your-db-name
-DB_PASSWORD=your-db-password
+# WhatsApp Bot Configuration
+NOMOR_WHATSAPP=628xxxxxxxxx
+
+# ========================================
+# Database Configuration (PostgreSQL)
+# ========================================
+DB_USER=your_db_user
+DB_HOST=localhost
+DB_NAME=bahasa-nusa
+DB_PASSWORD=your_db_password
 DB_PORT=5432
+
+# ========================================
+# LLM Configuration
+# ========================================
+# Primary LLM provider: 'openai' atau 'ollama'
+# Recommendation: 'openai' untuk production, 'ollama' untuk development
+LLM_PROVIDER=openai
+
+# ========================================
+# OpenAI Configuration (Primary)
+# ========================================
+# Dapatkan API key dari: https://platform.openai.com/api-keys
+# WAJIB diisi jika LLM_PROVIDER=openai
+OPENAI_API_KEY=sk-your-openai-api-key-here
+# Model yang tersedia: gpt-4o-mini, gpt-4o, gpt-3.5-turbo
+# Recommendation: gpt-4o-mini (cost-effective, good performance)
+OPENAI_MODEL=gpt-4o-mini
+
+# ========================================
+# Ollama Configuration (Fallback/Local)
+# ========================================
+# Pastikan Ollama server berjalan: ollama serve
+# Download model dulu: ollama pull qwen2.5:7b
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=qwen2.5:7b
+
+# ========================================
+# Setup Instructions:
+# ========================================
+# 1. Copy file ini ke .env: cp .env.example .env
+# 2. Isi OPENAI_API_KEY dengan API key yang valid
+# 3. Sesuaikan DB_* dengan konfigurasi database Anda
+# 4. Ganti NOMOR_WHATSAPP dengan nomor WhatsApp bot
+# 5. Jalankan: npm start
